Edits to homepage

--- a/src/index.html
+++ b/src/index.html
@@ -7,27 +7,23 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <!-- Header with Navigation -->
     <header>
         <nav class="sticky-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pages/experience.html">Experience</a></li>
                 <li><a href="pages/projects.html">Projects</a></li>
-                <li><a href="pages/resume.html">Resume</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Main Content -->
     <main>
-        <!-- Hero Section -->
         <section class="hero">
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>Sai Keertana Gubbala</h1>
-                    <p>Data Analyst, UX/UI Designer and Coder.</p>
-                    <button class="cta">Call to Action</button>
+                    <p>Data Analyst</p>
+                    <button class="cta">Contact Me</button>
                 </div>
                 <div class="hero-image-container">
                     <img src="portfolio.jpg" alt="Hero Image">
@@ -35,25 +31,110 @@
             </div>
         </section>
 
-        <!-- About Section -->
         <section class="about">
-            <h2>Catchy Headline</h2>
-            <p>More context about what you do.</p>
-            <button class="cta">Call to Action</button>
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
 
-        <!-- Pain Points and Solutions Section -->
-        <section class="pain-points">
+        <section class="skills">
             <div>
-                <h2>This is How I Can Help You</h2>
-                <p>Talk about the pain points your client has and why you're the one who's going to solve them.</p>
-                <button class="cta">Call to Action</button>
+                <h2>My Skills</h2>
+                <p>Some skills I’ve acquired over the course of undergraduate years and internships!</p>
+                <div class="skills-grid">
+                    <div class="card">
+                        <div class="card-inner">
+                            <div class="card-front">
+                                <h3>Data Science</h3>
+                            </div>
+                            <div class="card-back">
+                                <ul>
+                                    <li>Python</li>
+                                    <li>R/R-Studio</li>
+                                    <li>Tableau</li>
+                                    <li>Machine Learning</li>
+                                    <li>Data Visualization</li>
+                                    <li>Statistics and Modeling</li>
+                                    <li>Unix/Bash-Scripting</li>
+                                    <li>High-Performace Computing Center</li>
+                                    <li>Pandas, Numpy, Matplotlib, Seaborn </li>
+                                    <li>Scikit-Learn, StatsModels, Sklearn</li>
+                                    <li>PyTorch, Plotly, NetworkX</li>
+                                    <li>tidyverse, dplyr, ggplot2, lubridate</li>
+                                    <li>SAS, SQL, PowerBI (in progress)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-inner">
+                            <div class="card-front">
+                                <h3>Web Dev</h3>
+                            </div>
+                            <div class="card-back">
+                                <ul>
+                                    <li>HTML/CSS (Tailwind & Tufte)</li>
+                                    <li>JavaScript</li>
+                                    <li>React</li>
+                                    <li>Next.js, Node.js, Vue.js</li>
+                                    <li>Supabase, Firebase</li>
+                                    <li>Vercel, Netlify, Eleventy</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-inner">
+                            <div class="card-front">
+                                <h3>UX/UI</h3>
+                            </div>
+                            <div class="card-back">
+                                <ul>
+                                    <li>Figma</li>
+                                    <li>Miro</li>
+                                    <li>Prototyping & Usability</li>
+                                    <li>Survey Design</li>
+                                    <li>User Research</li>
+                                    <li>Wireframing & Persona Creation</li>
+                                    <li>Usability Testing</li>
+                                    <li>Interaction Design</li>
+                                    <li>User-Centered Design</li>
+                                    <li>Information Architecture</li>
+                                    <li>Comparative Analysis</li>
+                                    <li>Heuristic Evaluation</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-inner">
+                            <div class="card-front">
+                                <h3>Others</h3>
+                            </div>
+                            <div class="card-back">
+                                <ul>
+                                    <li>GIT</li>
+                                    <li>Jupyter Notebook</li>
+                                    <li>Qualtrics</li>
+                                    <li>Microsoft Office</li>
+                                    <li>Google Suite</li>
+                                    <li>Canva</li>
+                                    <li>Notion (Productivity Software)</li>
+                                    <li>Team Collaboration</li>
+                                    <li>Critical Thinking</li>
+                                    <li>Time Management</li>
+                                    <li>Leadership</li>
+                                    <li>Adaptability</li>
+                                    <li>Creativity</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <!-- Projects Section -->
         <section class="projects">
-            <h2>These Are My projects!</h2>
+            <h2>Projects</h2>
             <div class="project-item">
                 <h3>Project One</h3>
                 <p>Mini explanation about the service.</p>
@@ -69,10 +150,15 @@
                 <p>Mini explanation about the service.</p>
                 <button class="cta">Learn More</button>
             </div>
+            <button class="See More"> See More</button>
         </section>
+        <section class="contact">
+            <h2>Contact Me</h2>
+            <p>Do not hesitate to reach out to me, I look forward to connecting with you!</p>
+
+            </section>
     </main>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2025 Sai Keertana Gubbala. All rights reserved.</p>
     </footer>
