Updates to readme

--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,7 @@
         </section>
         <section class="contact">
             <h2>Contact Me</h2>
-            <p>Do not hesitate to reach out to me, I look forward to connecting with you!</p>
+            <p>Do not hesitate to reach out to me, I look forward to connecting with you ❤</p>
 
             </section>
     </main>
