Project section modified

--- a/src/index.html
+++ b/src/index.html
@@ -134,27 +134,30 @@
         </section>
 
         <section class="projects">
-            <h2>Projects</h2>
-            <div class="project-item">
-                <h3>Project One</h3>
-                <p>Mini explanation about the service.</p>
-                <button class="cta">Learn More</button>
+            <h2>Recent Projects</h2>
+            <div class="projects-container">
+                <div class="project-item">
+                    <h3>Project One</h3>
+                    <p>Mini explanation about the service.</p>
+                    <button class="cta">Learn More</button>
+                </div>
+                <div class="project-item">
+                    <h3>Project Two</h3>
+                    <p>Mini explanation about the service.</p>
+                    <button class="cta">Learn More</button>
+                </div>
+                <div class="project-item">
+                    <h3>Project Three</h3>
+                    <p>Mini explanation about the service.</p>
+                    <button class="cta">Learn More</button>
+                </div>
             </div>
-            <div class="project-item">
-                <h3>Project Two</h3>
-                <p>Mini explanation about the service.</p>
-                <button class="cta">Learn More</button>
-            </div>
-            <div class="project-item">
-                <h3>Project Three</h3>
-                <p>Mini explanation about the service.</p>
-                <button class="cta">Learn More</button>
-            </div>
-            <button class="See More"> See More</button>
+            <a href="/pages/projects.html" class="see-more-projects">See More</a>
         </section>
+        
         <section class="contact">
             <h2>Contact Me</h2>
-            <p>Do not hesitate to reach out to me, I look forward to connecting with you ❤</p>
+            <p>I look forward to connecting with you ❤!</p>
 
             </section>
     </main>
