homepage almost completed

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>Sai Keertana Gubbala</h1>
-                    <p>Data Analyst</p>
+                    <p>Data Analyst & Scientist</p>
                     <button class="cta">Contact Me</button>
                 </div>
                 <div class="hero-image-container">
@@ -33,7 +33,8 @@
 
         <section class="about">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Hi, I'm Saikeertana Gubbala, an aspiring data analyst with a unique path into data science, shaped by my fascination with how humans and technology interact. Starting my academic journey in <strong>Information Science</strong>, I initially aimed to become a bioinformatician but soon discovered my passion for data visualization, large datasets, and uncovering insights that drive real-world decisions. This pivot led me to explore how analytics and data-driven strategies can tackle critical challenges across various industries. I specialize in <strong>data analysis</strong>, <strong>visualization</strong>, and <strong>machine learning</strong>, with hands-on experience in <strong>Python</strong>, <strong>R</strong>, and <strong>HPCC systems</strong>.</p>
+            <p>My experiences range from healthcare informatics research, where I examined the intersection of mental health and telemedicine, to applying UX/UI principles for enhanced <strong>user-centered designs</strong>. I'm driven by the potential to make meaningful differences through <strong>data-informed decision making</strong>, whether that's improving patient outcomes in healthcare, optimizing business strategies, or enhancing user experiences through thoughtful design. My ultimate goal is to bridge the gap between complex datasets and practical solutions, using analytical techniques to solve multifaceted problems and foster innovation across any field I work in!</p>
         </section>
 
         <section class="skills">
@@ -157,9 +158,22 @@
         
         <section class="contact">
             <h2>Contact Me</h2>
-            <p>I look forward to connecting with you ❤!</p>
-
-            </section>
+            <p>Feel free to reach me at these links, I look forward to connecting with you ❤!</p>
+            <div class="contact-links">
+                <a href="mailto:gubbala.keertana@gmail.com" class="contact-link">
+                    <img src="gmail.png" alt="Email">
+                    <span>Email</span>
+                </a>
+                <a href="https://github.com/Saikeertanagubbala" class="contact-link">
+                    <img src="github-mark.png" alt="Github">
+                    <span>GitHub</span>
+                </a>
+                <a href="https://www.linkedin.com/in/keertanagubbala/" class="contact-link">
+                    <img src="linkedin.png" alt="LinkedIn">
+                    <span>LinkedIn</span>
+                </a>
+            </div>
+        </section>
     </main>
 
     <footer>
