new portfolio image edits

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                     <button class="cta">Contact Me</button>
                 </div>
                 <div class="hero-image-container">
-                    <img src="portfolio.jpg" alt="Hero Image">
+                    <img src="New_image.png" alt="Hero Image">
                 </div>
             </div>
         </section>
@@ -158,7 +158,7 @@
         
         <section class="contact">
             <h2>Contact Me</h2>
-            <p>Feel free to reach me at these links, I look forward to connecting with you ❤!</p>
+            <p>Feel free to reach me at these links, I look forward to connecting with you!</p>
             <div class="contact-links">
                 <a href="mailto:gubbala.keertana@gmail.com" class="contact-link">
                     <img src="gmail.png" alt="Email">
