--- a/src/pages/experience.html
+++ b/src/pages/experience.html
@@ -18,7 +18,8 @@
     </header>
     <main>
         <h1>Experience</h1>
-        <p>This is a placeholder for the experience section. Here you can describe your work experiences, internships, and any relevant skills you have acquired.</p>
+        <p><strong>Undergraduate Research Assistant</strong></p>
+        <p>In this position I have </p>
     </main>
 </body>
 </html>
