page structure completed, needs projects

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
         <nav class="sticky-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="pages/experience.html">Experience</a></li>
                 <li><a href="pages/projects.html">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -26,7 +26,7 @@
                     <button class="cta">Contact Me</button>
                 </div>
                 <div class="hero-image-container">
-                    <img src="New_image.png" alt="Hero Image">
+                    <img src="new_image.png" alt="Hero Image">
                 </div>
             </div>
         </section>
@@ -138,17 +138,17 @@
             <h2>Recent Projects</h2>
             <div class="projects-container">
                 <div class="project-item">
-                    <h3>Project One</h3>
+                    <h3>SCC Grid Search Optimization</h3>
                     <p>Mini explanation about the service.</p>
                     <button class="cta">Learn More</button>
                 </div>
                 <div class="project-item">
-                    <h3>Project Two</h3>
+                    <h3>Alzheimer's Research Project</h3>
                     <p>Mini explanation about the service.</p>
                     <button class="cta">Learn More</button>
                 </div>
                 <div class="project-item">
-                    <h3>Project Three</h3>
+                    <h3>Sustainable Tech Solutions</h3>
                     <p>Mini explanation about the service.</p>
                     <button class="cta">Learn More</button>
                 </div>
@@ -156,8 +156,8 @@
             <a href="/pages/projects.html" class="see-more-projects">See More</a>
         </section>
         
-        <section class="contact">
-            <h2>Contact Me</h2>
+        <section id="contact" class="contact">
+            <h2>Contact</h2>
             <p>Feel free to reach me at these links, I look forward to connecting with you!</p>
             <div class="contact-links">
                 <a href="mailto:gubbala.keertana@gmail.com" class="contact-link">
