--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -5,25 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/projects.css"> 
 </head>
 <body>
     <header>
         <nav class="sticky-nav">
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="experience.html">Experience</a></li>
                 <li><a href="projects.html">Projects</a></li>
+                <li><a href="../index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Projects</h1>
-        <p>This section showcases my projects. Here are some placeholder projects:</p>
-        <ul>
-            <li>Project 1: Description of project 1.</li>
-            <li>Project 2: Description of project 2.</li>
-            <li>Project 3: Description of project 3.</li>
-        </ul>
+        <section class="projects-section">
+            <h2>Data Science</h2>
+            <div class="projects-grid">
+                <div class="project-item">
+                    <img src="path/to/thumbnail1.jpg" alt="Project 1 Thumbnail">
+                    <h3>Project 1</h3>
+                    <p>A brief description of Project 1. Highlights key aspects.</p>
+                    <a href="https://github.com/yourprofile/project1" target="_blank">GitHub</a>
+                </div>
+                <div class="project-item">
+                    <img src="path/to/thumbnail2.jpg" alt="Project 2 Thumbnail">
+                    <h3>Project 2</h3>
+                    <p>A brief description of Project 2. Showcasing skills used.</p>
+                    <a href="https://github.com/yourprofile/project2" target="_blank">GitHub</a>
+                </div>
+                <div class="project-item">
+                    <img src="path/to/thumbnail3.jpg" alt="Project 3 Thumbnail">
+                    <h3>Project 3</h3>
+                    <p>A short overview of Project 3, summarizing its impact.</p>
+                    <a href="https://github.com/yourprofile/project3" target="_blank">GitHub</a>
+                </div>
+                <div class="project-item">
+                    <img src="path/to/thumbnail3.jpg" alt="Project 3 Thumbnail">
+                    <h3>Project 4</h3>
+                    <p>A short overview of Project 4, summarizing its impact.</p>
+                    <a href="https://github.com/yourprofile/project3" target="_blank">GitHub</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="projects-section">
+            <h2>UX/UI</h2>
+            <div class="projects-grid">
+                <div class="project-item">
+                    <img src="path/to/thumbnail4.jpg" alt="Project 4 Thumbnail">
+                    <h3>Project 4</h3>
+                    <p>Project 4 description with UI/UX details.</p>
+                    <a href="https://github.com/yourprofile/project4" target="_blank">GitHub</a>
+                </div>
+                <div class="project-item">
+                    <img src="path/to/thumbnail5.jpg" alt="Project 5 Thumbnail">
+                    <h3>Project 5</h3>
+                    <p>Project 5 design elements and implementation details.</p>
+                    <a href="https://github.com/yourprofile/project5" target="_blank">GitHub</a>
+                </div>
+                <div class="project-item">
+                    <img src="path/to/thumbnail6.jpg" alt="Project 6 Thumbnail">
+                    <h3>Project 6</h3>
+                    <p>UI/UX enhancements done in Project 6.</p>
+                    <a href="https://github.com/yourprofile/project6" target="_blank">GitHub</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="projects-section">
+            <h2>Web Development</h2>
+            <div class="projects-grid">
+                <div class="project-item">
+                    <img src="path/to/thumbnail7.jpg" alt="Project 7 Thumbnail">
+                    <h3>Project 7</h3>
+                    <p>A brief description of the web technologies used.</p>
+                    <a href="https://github.com/yourprofile/project7" target="_blank">GitHub</a>
+                </div>
+                <div class="project-item">
+                    <img src="path/to/thumbnail8.jpg" alt="Project 8 Thumbnail">
+                    <h3>Project 8</h3>
+                    <p>Web development techniques applied in Project 8.</p>
+                    <a href="https://github.com/yourprofile/project8" target="_blank">GitHub</a>
+                </div>
+                <div class="project-item">
+                    <img src="path/to/thumbnail9.jpg" alt="Project 9 Thumbnail">
+                    <h3>Project 9</h3>
+                    <p>Optimization and performance improvements in Project 9.</p>
+                    <a href="https://github.com/yourprofile/project9" target="_blank">GitHub</a>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <p>&copy; 2025 Sai Keertana Gubbala. All rights reserved.</p>
+    </footer>
 </body>
 </html>
