new project content

--- a/src/index.html
+++ b/src/index.html
@@ -139,17 +139,17 @@
             <div class="projects-container">
                 <div class="project-item">
                     <h3>SCC Grid Search Optimization</h3>
-                    <p>Mini explanation about the service.</p>
+                    <p>Optimized SCC for automated cell quantification.</p>
                     <button class="cta">Learn More</button>
                 </div>
                 <div class="project-item">
                     <h3>Alzheimer's Research Project</h3>
-                    <p>Mini explanation about the service.</p>
+                    <p>Analyzed Alzheimer's disparities in CDC data.</p>
                     <button class="cta">Learn More</button>
                 </div>
                 <div class="project-item">
                     <h3>Sustainable Tech Solutions</h3>
-                    <p>Mini explanation about the service.</p>
+                    <p>Designed SMS solution for rural farmers.</p>
                     <button class="cta">Learn More</button>
                 </div>
             </div>
