--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -23,14 +23,14 @@
             <div class="projects-grid">
                 <div class="project-item">
                     <img src="path/to/thumbnail1.jpg" alt="Project 1 Thumbnail">
-                    <h3>Project 1</h3>
-                    <p>A brief description of Project 1. Highlights key aspects.</p>
+                    <h3>SCC Grid Search Optimization</h3>
+                    <p>Collaborated with a team to optimize SimplyCellCounter (SCC) for automated cell quantification. Using grid search in Python, we fine-tuned parameters and improved accuracy across diverse datasets. Our work attempted to streamline SCC’s usability by addressing variability in tissue and image quality, and gave us insights on further refinements. </p>
                     <a href="https://github.com/yourprofile/project1" target="_blank">GitHub</a>
                 </div>
                 <div class="project-item">
                     <img src="path/to/thumbnail2.jpg" alt="Project 2 Thumbnail">
-                    <h3>Project 2</h3>
-                    <p>A brief description of Project 2. Showcasing skills used.</p>
+                    <h3>Alzheimer's Research Project</h3>
+                    <p>Performed data analysis on Alzheimer's disease prevalence and demographic disparities using Python, pandas, and matplotlib. Developed data cleaning and visualization skills while working with large healthcare datasets from the CDC, demonstrating proficiency in exploratory data analysis and statistical modeling for public health research.</p>
                     <a href="https://github.com/yourprofile/project2" target="_blank">GitHub</a>
                 </div>
                 <div class="project-item">
