--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,9 @@
                 <div class="hero-text">
                     <h1>Sai Keertana Gubbala</h1>
                     <p>Data Analyst & Scientist</p>
-                    <button class="cta">Contact Me</button>
                 </div>
                 <div class="hero-image-container">
-                    <img src="new_image.png" alt="Hero Image">
+                    <img src="portfolio.jpg" alt="Hero Image">
                 </div>
             </div>
         </section>
