--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -35,14 +35,14 @@
                 </div>
                 <div class="project-item">
                     <img src="path/to/thumbnail3.jpg" alt="Project 3 Thumbnail">
-                    <h3>Project 3</h3>
-                    <p>A short overview of Project 3, summarizing its impact.</p>
+                    <h3>Data Vizualization Project</h3>
+                    <p>Project showcasing data visualization principles and methods on a -- dataset to derive insights.</p>
                     <a href="https://github.com/yourprofile/project3" target="_blank">GitHub</a>
                 </div>
                 <div class="project-item">
                     <img src="path/to/thumbnail3.jpg" alt="Project 3 Thumbnail">
-                    <h3>Project 4</h3>
-                    <p>A short overview of Project 4, summarizing its impact.</p>
+                    <h3>Machine Learning Models</h3>
+                    <p>A repository of common ML models on a stroke dataset, includes regression, clustering, classification, pca and svm.</p>
                     <a href="https://github.com/yourprofile/project3" target="_blank">GitHub</a>
                 </div>
             </div>
