--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -22,20 +22,20 @@
             <h2>Data Science</h2>
             <div class="projects-grid">
                 <div class="project-item">
-                    <img src="path/to/thumbnail1.jpg" alt="Project 1 Thumbnail">
-                    <h3>SCC Grid Search Optimization</h3>
+                    <img src="path/to/thumbnail1.jpg" alt="SCC Thumbnail">
+                    <h3>SCC Grid Search Optimization </h3>
                     <p>Collaborated with a team to optimize SimplyCellCounter (SCC) for automated cell quantification. Using grid search in Python, we fine-tuned parameters and improved accuracy across diverse datasets. Our work attempted to streamline SCC’s usability by addressing variability in tissue and image quality, and gave us insights on further refinements. </p>
-                    <a href="https://github.com/yourprofile/project1" target="_blank">GitHub</a>
+                    <p>Note: Being reworked for documentation.</p>
                 </div>
                 <div class="project-item">
-                    <img src="path/to/thumbnail2.jpg" alt="Project 2 Thumbnail">
+                    <img src="path/to/thumbnail2.jpg" alt="Alzheimer's Thumbnail">
                     <h3>Alzheimer's Research Project</h3>
-                    <p>Performed data analysis on Alzheimer's disease prevalence and demographic disparities using Python, pandas, and matplotlib. Developed data cleaning and visualization skills while working with large healthcare datasets from the CDC, demonstrating proficiency in exploratory data analysis and statistical modeling for public health research.</p>
-                    <a href="https://github.com/yourprofile/project2" target="_blank">GitHub</a>
+                    <p>Performed demographic data analysis on Alzheimer's disease prevalence and demographic disparities using Python, pandas, and matplotlib. Developed data cleaning and visualization skills while working with large healthcare datasets from the CDC, demonstrating proficiency in exploratory data analysis and statistical modeling for public health research.</p>
+                    <p>Note: Being reworked for documentation.</p>
                 </div>
                 <div class="project-item">
-                    <img src="path/to/thumbnail3.jpg" alt="Project 3 Thumbnail">
-                    <h3>Data Vizualization Project</h3>
+                    <img src="path/to/thumbnail3.jpg" alt="Data Viz Thumbnail">
+                    <h3>Dashboard Creation </h3>
                     <p>Project showcasing data visualization principles and methods on a -- dataset to derive insights.</p>
                     <a href="https://github.com/yourprofile/project3" target="_blank">GitHub</a>
                 </div>
@@ -43,6 +43,7 @@
                     <img src="path/to/thumbnail3.jpg" alt="Project 3 Thumbnail">
                     <h3>Machine Learning Models</h3>
                     <p>A repository of common ML models on a stroke dataset, includes regression, clustering, classification, pca and svm.</p>
+                    <p>Note: In progress</p>
                     <a href="https://github.com/yourprofile/project3" target="_blank">GitHub</a>
                 </div>
             </div>
@@ -52,10 +53,10 @@
             <h2>UX/UI</h2>
             <div class="projects-grid">
                 <div class="project-item">
-                    <img src="path/to/thumbnail4.jpg" alt="Project 4 Thumbnail">
-                    <h3>Project 4</h3>
-                    <p>Project 4 description with UI/UX details.</p>
-                    <a href="https://github.com/yourprofile/project4" target="_blank">GitHub</a>
+                    <img src="Bangladesh_sustainability.png" alt="Bangladesh sustainability Thumbnail">
+                    <h3>Sustainable Technology Solutions</h3>
+                    <p>Designed sustainable solutions for rural farmers and fishermen in Bangladesh through UX research and human-centered technology. Created personas, developed low-fidelity prototypes in Figma, and tested the mobile use case, showcased in the linked presentation.</p>
+                    <a href="Final Presentation.pdf" target="_blank">Presentation</a>
                 </div>
                 <div class="project-item">
                     <img src="path/to/thumbnail5.jpg" alt="Project 5 Thumbnail">
