--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -53,16 +53,16 @@
             <h2>UX/UI</h2>
             <div class="projects-grid">
                 <div class="project-item">
-                    <img src="Bangladesh_sustainability.png" alt="Bangladesh sustainability Thumbnail">
+                    <img src="sustainability.png" alt="Bangladesh sustainability Thumbnail">
                     <h3>Sustainable Technology Solutions</h3>
                     <p>Designed sustainable solutions for rural farmers and fishermen in Bangladesh through UX research and human-centered technology. Created personas, developed low-fidelity prototypes in Figma, and tested the mobile use case, showcased in the linked presentation.</p>
                     <a href="Final Presentation.pdf" target="_blank">Presentation</a>
                 </div>
                 <div class="project-item">
-                    <img src="path/to/thumbnail5.jpg" alt="Project 5 Thumbnail">
-                    <h3>Project 5</h3>
-                    <p>Project 5 design elements and implementation details.</p>
-                    <a href="https://github.com/yourprofile/project5" target="_blank">GitHub</a>
+                    <img src="notion.jpg" alt="Degree Navigator Thumbnail">
+                    <h3>Degree Navigator</h3>
+                    <p>Interactive college credit planner created in Notion. Allows you to track your courses, credits, and progress across 4 years for your major or minor with comprehensive view, customizable fields and more. Gained 350+ downloads and 8 five-star reviews.</p>
+                    <a href="https://kgubbala.notion.site/Degree-Navigator-15d01a3e6800800884f9e86cea0d125d?pvs=4" target="_blank">Notion Template</a>
                 </div>
                 <div class="project-item">
                     <img src="path/to/thumbnail6.jpg" alt="Project 6 Thumbnail">
