added more projects

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -53,7 +53,7 @@
             <h2>UX/UI</h2>
             <div class="projects-grid">
                 <div class="project-item">
-                    <img src="sustainability.png" alt="Bangladesh sustainability Thumbnail">
+                    <img src="Sustainable.png" style="width:5em; height:8em;" alt="Bangladesh sustainability Thumbnail">
                     <h3>Sustainable Technology Solutions</h3>
                     <p>Designed sustainable solutions for rural farmers and fishermen in Bangladesh through UX research and human-centered technology. Created personas, developed low-fidelity prototypes in Figma, and tested the mobile use case, showcased in the linked presentation.</p>
                     <a href="Final Presentation.pdf" target="_blank">Presentation</a>
@@ -65,10 +65,16 @@
                     <a href="https://kgubbala.notion.site/Degree-Navigator-15d01a3e6800800884f9e86cea0d125d?pvs=4" target="_blank">Notion Template</a>
                 </div>
                 <div class="project-item">
-                    <img src="path/to/thumbnail6.jpg" alt="Project 6 Thumbnail">
-                    <h3>Project 6</h3>
-                    <p>UI/UX enhancements done in Project 6.</p>
-                    <a href="https://github.com/yourprofile/project6" target="_blank">GitHub</a>
+                    <img src="Cox3 mockup.jpg" style="width:15em; height:9em;" alt="Mockup">
+                    <h3>Co-x3 Product Mockups</h3>
+                    <p>Created polished product demos for a non-profit’s e-commerce site, enhancing brand identity and visual appeal. Conducted market research, staged products for compelling demo images, and designed multiple mockup options in Figma.</p>
+                    <a href="https://www.figma.com/design/A51bcSYu5AVwh0SaaIO2Cl/Design-Ideas?node-id=0-1&t=SznbBGgSlKm2r5wX-1" target="_blank">Figma</a>
+                </div>
+                <div class="project-item">
+                    <img src="e-commerce.png" style="width:15em; height:9em;" alt="e-commerce thumbnail">
+                    <h3>Co-x3 E-commerce Website</h3>
+                    <p>Assisted in designing and developing an e-commerce platform on Zoho Commerce to showcase products and support revenue generation for a non-profit. Contributed to enhancing interactivity by working with custom code and refining the user experience.</p>
+                    <a href="https://shop.x3.family/" target="_blank">Link to Website</a>
                 </div>
             </div>
         </section>
